{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 53,
  "lineage": "ba6e47de-4535-5470-a23e-9600b361122a",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "mtc-ip-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/a4c40189-6444-49cd-84e9-0a0163130295/resourceGroups/MTC_RG01/providers/Microsoft.Network/publicIPAddresses/mtc-pub-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.76.80.248",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "mtc-pub-ip",
            "resource_group_name": "MTC_RG01",
            "sku": "Basic",
            "tags": {
              "environment": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "mtc-nic-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a4c40189-6444-49cd-84e9-0a0163130295/resourceGroups/MTC_RG01/providers/Microsoft.Network/networkInterfaces/mtc-nic-1",
            "internal_domain_name_suffix": "ka1vxzilw5sung53mq1ldpzija.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a4c40189-6444-49cd-84e9-0a0163130295/resourceGroups/MTC_RG01/providers/Microsoft.Network/publicIPAddresses/mtc-pub-ip",
                "subnet_id": "/subscriptions/a4c40189-6444-49cd-84e9-0a0163130295/resourceGroups/MTC_RG01/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet-1"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-2A-C0-99",
            "name": "mtc-nic-1",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "MTC_RG01",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/a4c40189-6444-49cd-84e9-0a0163130295/resourceGroups/MTC_RG01/providers/Microsoft.Compute/virtualMachines/mtc-vm01"
          },
          "dependencies": [
            "azurerm_public_ip.mtc-pub-ip",
            "azurerm_resource_group.MTC_RG01",
            "azurerm_subnet.mtc-subnet",
            "azurerm_virtual_network.mtc-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mtc-Sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a4c40189-6444-49cd-84e9-0a0163130295/resourceGroups/MTC_RG01/providers/Microsoft.Network/networkSecurityGroups/mtc-Sg",
            "location": "eastus",
            "name": "mtc-Sg",
            "resource_group_name": "MTC_RG01",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "mtc-dev-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.MTC_RG01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "mtc-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/a4c40189-6444-49cd-84e9-0a0163130295/resourceGroups/MTC_RG01/providers/Microsoft.Network/networkSecurityGroups/mtc-Sg/securityRules/mtc-dev-rule",
            "name": "mtc-dev-rule",
            "network_security_group_name": "mtc-Sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "MTC_RG01",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.mtc-Sg",
            "azurerm_resource_group.MTC_RG01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "mtc-pub-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/a4c40189-6444-49cd-84e9-0a0163130295/resourceGroups/MTC_RG01/providers/Microsoft.Network/publicIPAddresses/mtc-pub-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.76.80.248",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "mtc-pub-ip",
            "resource_group_name": "MTC_RG01",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.MTC_RG01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mtc-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.123.1.0/24",
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a4c40189-6444-49cd-84e9-0a0163130295/resourceGroups/MTC_RG01/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet-1",
            "name": "mtc-subnet-1",
            "resource_group_name": "MTC_RG01",
            "virtual_network_name": "mtc-network"
          },
          "dependencies": [
            "azurerm_resource_group.MTC_RG01",
            "azurerm_virtual_network.mtc-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "mtc-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a4c40189-6444-49cd-84e9-0a0163130295/resourceGroups/MTC_RG01/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet-1",
            "network_security_group_id": "/subscriptions/a4c40189-6444-49cd-84e9-0a0163130295/resourceGroups/MTC_RG01/providers/Microsoft.Network/networkSecurityGroups/mtc-Sg",
            "subnet_id": "/subscriptions/a4c40189-6444-49cd-84e9-0a0163130295/resourceGroups/MTC_RG01/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet-1"
          },
          "dependencies": [
            "azurerm_network_security_group.mtc-Sg",
            "azurerm_resource_group.MTC_RG01",
            "azurerm_subnet.mtc-subnet",
            "azurerm_virtual_network.mtc-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "mtc-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e55b3750-b70b-46e5-9bfd-6436b1bf2848",
            "id": "/subscriptions/a4c40189-6444-49cd-84e9-0a0163130295/resourceGroups/MTC_RG01/providers/Microsoft.Network/virtualNetworks/mtc-network",
            "location": "eastus",
            "name": "mtc-network",
            "resource_group_name": "MTC_RG01",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/a4c40189-6444-49cd-84e9-0a0163130295/resourceGroups/MTC_RG01/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet-1",
                "name": "mtc-subnet-1",
                "security_group": "/subscriptions/a4c40189-6444-49cd-84e9-0a0163130295/resourceGroups/MTC_RG01/providers/Microsoft.Network/networkSecurityGroups/mtc-Sg"
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.MTC_RG01"
          ]
        }
      ]
    }
  ]
}